fix: [WA-505] Fix image anad video component spacing

--- a/docroot/themes/custom/wateraid/components/accordion/accordion.scss
+++ b/docroot/themes/custom/wateraid/components/accordion/accordion.scss
@@ -68,4 +68,11 @@
   mark {
     background: $wa-navy-10;
   }
+
+  .image {
+    margin-top: 0;
+    @include desktop {
+      margin-top: 0;
+    }
+  }
 }
